Adjust container margin-top to fix layout spacing after header changes

--- a/static/style.css
+++ b/static/style.css
@@ -154,7 +154,7 @@ body {
 }
 
 .container {
-    margin-top: 120px;
+    margin-top: 100px;
     margin-bottom: 80px;
     width: 100%;
     height: calc(100vh - 200px);
